--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "homepage": "https://github.com/MuhammadAriqRafi/cinda-logika-grafia#readme",
     "devDependencies": {
         "tailwindcss": "^3.1.8"
+    },
+    "dependencies": {
+        "daisyui": "^2.24.0"
     }
 }
